Implement autosave functionality for lesson drafts and improve profile image upload
- Added autosave feature for lesson drafts every 2 minutes in the editor component.
- Integrated image cropping functionality in the profile component for user avatars.
- Updated package.json to include necessary dependencies for image cropping and polyfills.
- Enhanced progress display in lessons with color-coded badges based on scores.
- Refactored sorting logic for lessons to extract numbers from titles.
- Improved styling for progress badges and avatar previews.
- Added file input for uploading new profile images with a preview.